--- a/.github/workflows/dotnetpul.yml
+++ b/.github/workflows/dotnetpul.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: descarga codigo
+      uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
