--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,9 +3,9 @@
 
 name: .NET
 
-on:
-  pull_request:
-    branches: [ "master" ]
+#on:
+#  pull_request:
+#    branches: [ "master" ]
 
 jobs:
   build:
